Fixes for Java 11 compatibility